--- a/project/src/travelocity/res/values-fr-rCA/strings.xml
+++ b/project/src/travelocity/res/values-fr-rCA/strings.xml
@@ -16,7 +16,7 @@
     <string name="contact_travelocity">Communiquer avec Travelocity</string>
     <string name="travelocity_website">Site Web de Travelocity</string>
     <string name="travelocity_app_support">Soutien de l\&apos;appli Travelocity</string>
-    <string name="travelocity_copyright">© Copyright 2012-2014 Travelocity\nTous droits réservés.</string>
+    <string name="travelocity_copyright_TEMPLATE">© Copyright 2012-%1$s Travelocity\nTous droits réservés.</string>
     <string name="travelocity_info_url">http://www.travelocity.com/</string>
 
     <!-- Label for logout confirmation -->
