style cars search widget

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <!-- Label for car dropoff selector, indicates it cannot be different from pickup location -->
     <string name="same_as_pick_up">Same as pick-up</string>
     <!-- Label for Car Search Screen header -->
-    <string name="dates_and_location">Dates and Location</string>
+    <string name="dates_and_location">Dates &amp; Location</string>
     <!-- Label for Cars date button -->
     <string name="select_pickup_and_dropoff_dates">Select pick-up and drop-off dates</string>
     <!-- When user hasn't picked return date/time, we show something like: "Jan. 21, 2:00PM - Select return date" -->
